# rust-web-exercise

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 0001_initial_db.sql
src/: app_state.rs  env_variables.rs  main.rs
src/db/: blog_posts.rs  image.rs  mod.rs
src/endpoints/: blog_posts.rs  home.rs  images.rs  mod.rs  static_files.rs
src/endpoints/models/: create_blog_post.rs  get_posts_response.rs  mod.rs
src/services/: blog_post_service.rs  file_handler_service.rs  mod.rs  static_files_service.rs
static_files/: index.html  script.js  style.css
